# stowfiles

./: .dprint.jsonc  .gitignore  .mise.toml  .pre-commit-config.yaml  .prettierrc.toml  .reinstall  .stow-local-ignore  .stowrc  .stylua.toml  .taplo.toml  .update-installed  .update-nvim  .yamlfmt.yml  CHANGELOG.md  CLAUDE.md  INSTALLED-arch.md  INSTALLED-linux.md  INSTALLED-mac.md  LICENSE  README.md  cliff.toml  dprint.jsonc  engeir.txt  hk.pkl  hyperfine-lazy.out  hyperfine-lazy2.out  hyperfine-packer.out  justfile  makefile  release-notes.md  update-installed-auto  vhs.tape
X/: .xinitrc  .xprofile  .xsessionrc  CHANGELOG.md
alacritty/: CHANGELOG.md
alacritty_arch/: CHANGELOG.md
alacritty_mac/: CHANGELOG.md
android/: CHANGELOG.md  market-url.txt  text-list.txt
bash/: .bash_profile  .bashrc
bspwm/: CHANGELOG.md
bspwm/.config/polybar/scripts/music/: README.md  player-mpris-tail.py  pyproject.toml
bun/: CHANGELOG.md
calcurse/: CHANGELOG.md
compton/: CHANGELOG.md
despell/: CHANGELOG.md
dprint/: CHANGELOG.md
dunst/: CHANGELOG.md
emojis/: CHANGELOG.md
firefox/: CHANGELOG.md
fish/: CHANGELOG.md
gup/: CHANGELOG.md
helix/: CHANGELOG.md
latexindent/: .indentconfig.yaml  CHANGELOG.md
lf/: CHANGELOG.md
lf_fram/: CHANGELOG.md
lf_mac/: CHANGELOG.md
llf/: CHANGELOG.md
mdl/: CHANGELOG.md
mimi/: CHANGELOG.md
mise/: .default-gems  .default-go-packages  .default-python-packages  .envrc  .mise.toml  CHANGELOG.md
mpv/: CHANGELOG.md
newsboat/: CHANGELOG.md
nsxiv/: CHANGELOG.md
nushell/: CHANGELOG.md
nvim_lua/: CHANGELOG.md
(+986 files in other folders)
