[project]
authors = [{ name = "engeir", email = "engeir@pm.me" }]
dependencies = ["dbus-python>=1.3.2", "pygobject>=3.48.2"]
description = "Add your description here"
name = "music"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[tool.rye]
dev-dependencies = []
managed = true
virtual = true
